project('cpk', 'c', default_options : ['c_std=c2x'])

executable('k', [
    'src/main.c', 'src/parse.c', 'src/print.c', 'src/bc.c', 'src/dbc.c', 'src/vm.c', 'src/common.c',
    'src/verbs/00.c', 'src/verbs/01.c', 'src/verbs/02.c', 'src/verbs/03.c', 'src/verbs/04.c', 'src/verbs/05.c', 'src/verbs/06.c', 'src/verbs/07.c', 'src/verbs/08.c', 'src/verbs/09.c',
    'src/verbs/10.c', 'src/verbs/11.c', 'src/verbs/12.c', 'src/verbs/13.c', 'src/verbs/14.c', 'src/verbs/15.c', 'src/verbs/16.c', 'src/verbs/17.c', 'src/verbs/18.c'
])
